due to some problem i have change the Repositories

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
 
                 <div class="head-image">
-                    <img src="Flower Asset/pngwing 10.png" alt="coming soon">
+                    <img src="asset/pngwing 10.png" alt="coming soon">
                 </div>
 
             </div>
@@ -43,14 +43,14 @@
 
             <div class="photos3">
                 <div class="photo1">
-                    <img src="Flower Asset/pngwing 6.png" alt="coming soon">
+                    <img src="asset/pngwing 6.png" alt="coming soon">
 
                 </div>
                 <div class="photo2">
-                    <img src="Flower Asset/pngwing 5.png" alt="coming soon">
+                    <img src="asset/pngwing 5.png" alt="coming soon">
                 </div>
                 <div class="photo3">
-                    <img src="Flower Asset/pngwing 7.png" alt="coming soon">
+                    <img src="asset/pngwing 7.png" alt="coming soon">
                 </div>
                 <div class="photo-heading">
                 </div>
@@ -64,15 +64,15 @@
         <section>
             <div class="detail">
                 <div class="detail1">
-                    <img src="Flower Asset/Group 57.png" alt="">
+                    <img src="asset/Group 57.png" alt="">
                     <h3>Same Day Delivery. Click & Collect.</h3>
                 </div>
                 <div class="detail2">
-                    <img src="Flower Asset/Group 58.png" alt="">
+                    <img src="asset/Group 58.png" alt="">
                     <h3>Fresh Flowers. Local Growers.</h3>
                 </div>
                 <div class="detail3">
-                    <img src="Flower Asset/Group 59.png" alt="">
+                    <img src="asset/Group 59.png" alt="">
                     <h3>24/7 Free Support.</h3>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                     <button class="sec3-btn">Sing Up</button>
                 </div>
                 <div class="sec3-photo">
-                    <img src="Flower Asset/pngwing 8.png" alt="">
+                    <img src="asset/pngwing 8.png" alt="">
                 </div>
             </div>
         </section>
@@ -100,16 +100,16 @@
                 content of a page when looking at its layout.</p>
             <div class="sec4-images">
                 <div clas-images4s="s4-imges1">
-                    <img src="Flower Asset/Flower 01.png" alt="">
+                    <img src="asset/Flower 01.png" alt="">
                 </div>
                 <div class="s4-imges2">
-                    <img src="Flower Asset/Rectangle 4.png" alt="">
+                    <img src="asset/Rectangle 4.png" alt="">
                 </div>
                 <div class="s4-imges3">
-                    <img src="Flower Asset/Rectangle 5.png" alt="">
+                    <img src="asset/Rectangle 5.png" alt="">
                 </div>
                 <div class="s4-imges4">
-                    <img src="Flower Asset/Rectangle 6.png" alt="">
+                    <img src="asset/pngwing 6.png" alt="">
                 </div>
             </div>
         </section>
